Implementing filtrations for articles in administration

--- a/App/src/components/common/AdministartionPageHeader/AdministartionPageHeader.module.scss
+++ b/App/src/components/common/AdministartionPageHeader/AdministartionPageHeader.module.scss
@@ -2,4 +2,7 @@
 .title {
   @include fontSizeTwentyFive;
   margin-bottom: 32px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
