--- a/App/src/pages/MainPage/ArticlePage/ArticlePage.module.scss
+++ b/App/src/pages/MainPage/ArticlePage/ArticlePage.module.scss
@@ -80,6 +80,9 @@
         padding: 12px;
         cursor: pointer;
       }
+      .documents:hover {
+        @include greenShadow;
+      }
     }
   }
   .error {
