--- a/App/src/styles/Commons.scss
+++ b/App/src/styles/Commons.scss
@@ -3,6 +3,7 @@
 @import "./CommonFonts.scss";
 @import "./CommonWrapLongText.scss";
 @import "./CommonShadows.scss";
+@import "./DatepickerStyles.scss";
 @import "./CommonMediaSizes.scss";
 @import "./Articles/CommonArticlesIndents.scss";
 @import "./Users/CommonUsersIndents.scss";
