--- a/App/src/styles/DatepickerStyles.scss
+++ b/App/src/styles/DatepickerStyles.scss
@@ -49,3 +49,6 @@
 .react-datepicker__day--outside-month {
   color: $gray-text;
 }
+.react-datepicker__close-icon::after {
+  background-color: $intensive-orange;
+}
