--- a/App/src/components/ArticlesComponents/Overview/EduLinksPage/EduLinksItems/EduLinkItem/EduLinkItem.module.scss
+++ b/App/src/components/ArticlesComponents/Overview/EduLinksPage/EduLinksItems/EduLinkItem/EduLinkItem.module.scss
@@ -1,4 +1,4 @@
-@import 'styles/Commons.scss';
+@import "styles/Commons.scss";
 .item {
   @include fontSizeSixteen;
   color: $black-text;
@@ -19,6 +19,9 @@
     @include titleColumnWidth;
     display: flex;
     align-items: center;
+    span {
+      @include wrapLongText;
+    }
   }
   .creator {
     @include creatorColumnWidth;
