--- a/App/src/components/common/FileModal/FileModal.module.scss
+++ b/App/src/components/common/FileModal/FileModal.module.scss
@@ -6,6 +6,12 @@
   box-shadow: 0px 8px 40px $gray-box-shadow;
   border-radius: 16px;
   padding: 32px;
+  @media (max-width: $mobileMaxSize) {
+    max-width: 300px;
+  }
+  @media (max-width: 500px) {
+    max-width: 70vw;
+  }
 }
 .fileModalOverlay {
   position: fixed;
@@ -31,6 +37,12 @@
 }
 @mixin drozponeStyles {
   width: 450px;
+  @media (max-width: $mobileMaxSize) {
+    width: 300px;
+  }
+  @media (max-width: 500px) {
+    width: 70vw;
+  }
   height: 150px;
   margin-top: 16px;
   margin-bottom: 8px;
@@ -47,6 +59,8 @@
 .dropzone:hover {
   border: 1px solid $intensive-orange;
   .dropzoneText {
+    padding: 0 16px;
+    text-align: center;
     color: $intensive-orange;
   }
 }
