--- a/App/src/pages/AdministrationSubpages/ArticlesPage/Create/EduLinks/CreateEduLinkPage.module.scss
+++ b/App/src/pages/AdministrationSubpages/ArticlesPage/Create/EduLinks/CreateEduLinkPage.module.scss
@@ -47,5 +47,9 @@
   .error {
     @include fontSizeFourteen;
     color: $intensive-red;
+    @media (max-width: 500px) {
+      text-align: right;
+      margin-left: 12px;
+    }
   }
 }
