Improved performance (initial page speed and fixed filtrations bugs)

--- a/App/src/styles/Commons.scss
+++ b/App/src/styles/Commons.scss
@@ -7,3 +7,4 @@
 @import "./CommonMediaSizes.scss";
 @import "./Articles/CommonArticlesIndents.scss";
 @import "./Users/CommonUsersIndents.scss";
+@import "./ReactQuillStyles.scss";
